backend issues fixed